# real-estate-agreggator

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/migrations/: 001_initial.sql
